@@ -1,2 +1,16 @@
 language
-	original_language = <"en">
+	original_language = <"en"> 
+	translations = <
+        ["de"] = <
+        	language = <"de">
+            author = <
+            	["email"] = <"harry@something.somewhere.co.uk">            	
+            	["name"] = <"Harry Potter">            	
+            >
+            accreditation = <"British Medical Translator id 00400595">
+            other_details = <
+            	["reviewer 1"] = <"Ron Weasley">
+            	["reviewer 2"] = <"Rubeus Hagrid">            	
+            >
+        >
+    >	
